# airflow-demo

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
dags/: hello_tasks_dag.py  hello_world_dag.py
